<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/the_text"
                android:text="@string/the_text"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/edit_text_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="100dp"/>

            <TextView
                android:id="@+id/explaining_text_1"
                android:text="@string/explaining_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="78dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/explaining_text_2"
                android:text="@string/explaining_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="78dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/explaining_text_1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/explaining_text_3"
                android:text="@string/explaining_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_width="78dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/explaining_text_2"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/edit_text_1"
                android:hint="@string/input_1"
                android:textColorHint="@color/input"
                android:backgroundTint="@color/input"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_width="200dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/explaining_text_1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:id="@+id/edit_text_2"
                android:hint="@string/input_2"
                android:textColorHint="@color/input"
                android:backgroundTint="@color/input"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_width="200dp"
                android:layout_height="48dp"
                app:layout_constraintLeft_toRightOf="@id/explaining_text_2"
                app:layout_constraintTop_toBottomOf="@id/edit_text_1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:id="@+id/edit_text_3"
                android:hint="@string/input_3"
                android:textColorHint="@color/input"
                android:backgroundTint="@color/input"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_width="200dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/edit_text_2"
                app:layout_constraintLeft_toRightOf="@id/explaining_text_3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/write"
                android:text="@string/write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/read"
                android:text="@string/read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/write"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/delete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/write"
                app:layout_constraintLeft_toRightOf="@+id/read"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>